--- a/blogs.html
+++ b/blogs.html
@@ -80,7 +80,8 @@
             Niantic is a world renowned for augmented reality also known as AR and on their homepage they have a goal for AR to improve people’s life, “What if augmented reality could make us better? 
             Could it nudge us off the couch for a Saturday in the park?”. 
             Besides the augmented reality, the thing I like about this application is how it tracks your steps weekly and gives you rewards and incentives through how many miles you walk. 
-            You can find pokemon and collect items at stops in different locations and the only way to move in the game is by walking. This gamification of healthy activities has really been pivotal for my weight loss and I know that it can do the same for others.
+            You can find pokemon and collect items at stops in different locations and the only way to move in the game is by walking. 
+            This gamification of healthy activities has really been pivotal for my weight loss and I know that it can do the same for others.
         </p>
         <img src="/Images/buddyPokemon.jpg" class="blog-image" alt="Image of my Buddy Pokemon Squirtle using the Artificial Reality Game PokemonGo ">
         <div>
