--- a/testimonials.html
+++ b/testimonials.html
@@ -81,7 +81,7 @@
             He went on to say that the project will continue to be used in real life for some time.
             <em>“She loved the project and is using it for her future classes!”</em>
         </p>
-        <p>Check out that project here: <a href="https://scegob.github.io/week8CSSCodingProjectEnviornmentalScience/" target="_blank">Environmental Science Page</a></p>
+        <h3>Check out that project here: <a href="https://scegob.github.io/week8CSSCodingProjectEnviornmentalScience/" target="_blank">Environmental Science Page</a></h3>
         <p>
             Regarding his final project, Billeh shared that <em>“What they say is true, you want to build a project you’re going to enjoy and talk about.”</em>
             This is why he decided to change his original plans that utilized the DoorDash API and instead use PokeAPI as the data source for his final project. 
