fixed the contacts a tags

--- a/testimonials.html
+++ b/testimonials.html
@@ -34,7 +34,7 @@
         <h1>Testimonials</h1>
     </div>
     <div>
-        <h2>October 2022 Student of the Month: <a href="https://medium.com/science-technology-and-society" target="_blank">Billeh Scego</a></h2>
+        <h2>October 2022 Student of the Month: <a href="https://www.linkedin.com/in/scegob/" target="_blank">Billeh Scego</a></h2>
         <img src="/Images/studentOfTheMonth.webp" alt="Student of the Month: Billeh Scego">
         <h2>From Career Indecision to Success Amid a Global Pandemic</h2>
         <p>
