--- a/contact.html
+++ b/contact.html
@@ -57,12 +57,12 @@
         <span>
             <ul class="list-style contacts">
                 <li>
-                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/linkedin.svg" height="50px" width="50px" alt="LinkedIn Logo"></a>
-                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">LinkedIn</p></a>
+                    <a href="https://www.linkedin.com/in/scegob/" target="_blank"><img src="./Images/icons/linkedin.svg" height="50px" width="50px" alt="LinkedIn Logo"></a>
+                    <p><a href="https://www.linkedin.com/in/scegob/" target="_blank">LinkedIn</p></a>
                 </li>
                 <li>
-                    <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/github.svg" height="50px" width="50px" alt="GitHub Logo"></a>
-                    <p><a href="https://medium.com/science-technology-and-society" target="_blank">GitHub/p></a>
+                    <a href="https://github.com/scegob" target="_blank"><img src="./Images/icons/github.svg" height="50px" width="50px" alt="GitHub Logo"></a>
+                    <p><a href="https://github.com/scegob" target="_blank">GitHub</p></a>
                 </li>
                 <li>
                     <a href="https://medium.com/science-technology-and-society" target="_blank"><img src="./Images/icons/medium.svg" height="50px" width="50px" alt="Medium Logo"></a>
