fixing files for publishing

--- a/blogs.html
+++ b/blogs.html
@@ -10,22 +10,22 @@
 </head>
 <body>
     <div class="top-nav">
-        <a href="/index.html"><img src="/Images/logo/Billeh Scego.png" class="logo"></a>
+        <a href="./index.html"><img src="./Images/logo/Billeh Scego.png" class="logo"></a>
         <ul class="top-nav-list">
             <li class="list-hover">
-                <a href="index.html">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li class="list-hover">
-                <a href="/projects.html">Projects</a>
+                <a href="./projects.html">Projects</a>
             </li>
             <li class="list-hover">
-                <a href="/blogs.html">Blogs</a>
+                <a href="./blogs.html">Blogs</a>
             </li>
             <li class="list-hover">
-                <a href="/testimonials.html">Testimonials</a>
+                <a href="./testimonials.html">Testimonials</a>
             </li>
             <li class="list-hover">
-                <a href="/contact.html">Contact</a>
+                <a href="./contact.html">Contact</a>
             </li>
         </ul>
     </div>
@@ -41,7 +41,7 @@
             His profound insights into human development have had a lasting impact on my thought process. 
             Erikson’s theory of psychosocial development deepened our understanding of the complex interactions between social dynamics and human development, going beyond the scope of merely biological and psychological processes.
         </p>
-        <img src="/Images/erikErikson.jpg" class="blog-image" alt="Erik Erikson">
+        <img src="./Images/erikErikson.jpg" class="blog-image" alt="Erik Erikson">
         <div>
             <p class="tags">Psychology</p>
             <p class="minute-read">9 min read</p>
@@ -53,7 +53,7 @@
         <p>
             The number one thing I learned from <a href="https://promineotech.com/" target="_blank">Promineo Tech’s</a> frontend bootcamp was that online resources are a google search away but I hope that this medium article can be a one-stop-shop for current and future programmers.
         </p>
-        <img src="/Images/codingGold.jpg" class="blog-image" alt="Tressure Chest">
+        <img src="./Images/codingGold.jpg" class="blog-image" alt="Tressure Chest">
         <div>
             <p class="tags">Programming</p>
             <p>7 min read</p>
@@ -67,7 +67,7 @@
             The website provides information about features, pricing, compatibility, and effective usage of Microsoft’s products and services. 
             It responds to inquiries regarding software updates, technical problems, troubleshooting, and offers resources for customers looking for assistance with Microsoft products.
         </p>
-        <img src="/Images/microsoft.jpg" class="blog-image" alt="Microsoft Logo">
+        <img src="./Images/microsoft.jpg" class="blog-image" alt="Microsoft Logo">
         <div>
             <p class="tags">Web Design</p>
             <p class="minute-read">5 min read</p>
@@ -83,7 +83,7 @@
             You can find pokemon and collect items at stops in different locations and the only way to move in the game is by walking. 
             This gamification of healthy activities has really been pivotal for my weight loss and I know that it can do the same for others.
         </p>
-        <img src="/Images/buddyPokemon.jpg" class="blog-image" alt="Image of my Buddy Pokemon Squirtle using the Artificial Reality Game PokemonGo ">
+        <img src="./Images/buddyPokemon.jpg" class="blog-image" alt="Image of my Buddy Pokemon Squirtle using the Artificial Reality Game PokemonGo ">
         <div>
             <p class="tags">Health</p>
             <p class="minute-read">9 min read</p>
@@ -96,7 +96,7 @@
                 This course examined the complex interrelationship between politics and scientific progress, examining how political issues affect scientific discoveries and the applications that follow. 
                 We engaged in fascinating debates and looked at thought-provoking case studies throughout the semester, which helped me to better appreciate the dynamic relationship between science and society.
             </p>
-            <img src="/Images/standardMan.jpg" class="blog-image" alt="The Standard Man">
+            <img src="./Images/standardMan.jpg" class="blog-image" alt="The Standard Man">
             <div>
                 <p class="tags">Science</p>
                 <p class="minute-read">5 min read</p>
@@ -108,7 +108,7 @@
                     Failure is a necessary component to success, and this is a fact that many people are afraid to acknowledge because it will require change that they are not willing to make. 
                     This approach aligns with the concept of a Growth Mindset, where setbacks are viewed as opportunities for improvement rather than insurmountable obstacles.
                 </p>
-                <img src="/Images/lawOfAction.jpg" class="blog-image" alt="Knight riding a horse">
+                <img src="./Images/lawOfAction.jpg" class="blog-image" alt="Knight riding a horse">
                 <div>
                     <p class="tags">Growth</p>
                     <p class="minute-read">5 min read</p>
@@ -128,7 +128,7 @@
     </div>
     <footer class="footer">
         <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
-        <a href="/siteMap.html"><p>Site Map</p></a>
+        <a href="./siteMap.html"><p>Site Map</p></a>
     </footer>
 </body>
 </html>
