--- a/contact.html
+++ b/contact.html
@@ -10,22 +10,22 @@
 </head>
 <body>
     <div class="top-nav">
-        <a href="/index.html"><img src="/Images/logo/Billeh Scego.png" class="logo"></a>
+        <a href="./index.html"><img src="./Images/logo/Billeh Scego.png" class="logo"></a>
         <ul class="top-nav-list">
             <li class="list-hover">
-                <a href="index.html">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li class="list-hover">
-                <a href="/projects.html">Projects</a>
+                <a href="./projects.html">Projects</a>
             </li>
             <li class="list-hover">
-                <a href="/blogs.html">Blogs</a>
+                <a href="./blogs.html">Blogs</a>
             </li>
             <li class="list-hover">
-                <a href="/testimonials.html">Testimonials</a>
+                <a href="./testimonials.html">Testimonials</a>
             </li>
             <li class="list-hover">
-                <a href="/contact.html">Contact</a>
+                <a href="./contact.html">Contact</a>
             </li>
         </ul>
     </div>
@@ -35,7 +35,7 @@
     <div>
         <h2>Billeh Scego</h2>
         <img src="/Images/emojis/peace.svg" height="50px" width="50px">
-        <h3><a href="/projects.html">Frontend Web Developer</a> | JavaScript , CSS, HTML, Bootstrap, React</h3>
+        <h3><a href="./projects.html">Frontend Web Developer</a> | JavaScript , CSS, HTML, Bootstrap, React</h3>
         <div>
             <p>
                 👋 Hi, I’m Billeh. <br>
@@ -74,6 +74,6 @@
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
-    <a href="/siteMap.html"><p>Site Map</p></a>
+    <a href="./siteMap.html"><p>Site Map</p></a>
 </footer>
 </html>
