--- a/projects.html
+++ b/projects.html
@@ -10,22 +10,22 @@
 </head>
 <body>
     <div class="top-nav">
-        <a href="/index.html"><img src="/Images/logo/Billeh Scego.png" class="logo"></a>
+        <a href="./index.html"><img src="./Images/logo/Billeh Scego.png" class="logo"></a>
         <ul class="top-nav-list">
             <li class="list-hover">
-                <a href="index.html">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li class="list-hover">
-                <a href="/projects.html">Projects</a>
+                <a href="./projects.html">Projects</a>
             </li>
             <li class="list-hover">
-                <a href="/blogs.html">Blogs</a>
+                <a href="./blogs.html">Blogs</a>
             </li>
             <li class="list-hover">
-                <a href="/testimonials.html">Testimonials</a>
+                <a href="./testimonials.html">Testimonials</a>
             </li>
             <li class="list-hover">
-                <a href="/contact.html">Contact</a>
+                <a href="./contact.html">Contact</a>
             </li>
         </ul>
     </div>
