--- a/templateSecondDesign.html
+++ b/templateSecondDesign.html
@@ -10,22 +10,22 @@
 </head>
 <body>
     <div class="top-nav">
-        <a href="/index.html"><img src="/Images/logo/Billeh Scego.png" class="logo"></a>
+        <a href="./index.html"><img src="./Images/logo/Billeh Scego.png" class="logo"></a>
         <ul class="top-nav-list">
             <li class="list-hover">
-                <a href="index.html">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li class="list-hover">
-                <a href="/projects.html">Projects</a>
+                <a href="./projects.html">Projects</a>
             </li>
             <li class="list-hover">
-                <a href="/blogs.html">Blogs</a>
+                <a href="./blogs.html">Blogs</a>
             </li>
             <li class="list-hover">
-                <a href="/testimonials.html">Testimonials</a>
+                <a href="./testimonials.html">Testimonials</a>
             </li>
             <li class="list-hover">
-                <a href="/contact.html">Contact</a>
+                <a href="./contact.html">Contact</a>
             </li>
         </ul>
     </div>
@@ -39,6 +39,6 @@
 </body>
 <footer class="footer">
     <p>Website developed by <a href="https://github.com/scegob" target="_blank">Billeh Scego</a> ©️2023</p>
-    <a href="/siteMap.html"><p>Site Map</p></a>
+    <a href="./siteMap.html"><p>Site Map</p></a>
 </footer>
 </html>
